objects/Service__c/fields/First_CN__c.field-meta.xml
<CustomField>
    <fullName>First_CN__c</fullName>
    <label>First CN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>