objects/Service__c/fields/Last_product_term_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_product_term_Update_Date__c</fullName>
    <label>Last product term Update Date</label>
    <type>Date</type>
</CustomField>