objects/Service__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MRR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>