objects/Service__c/fields/Original_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Term_End_Date__c</fullName>
    <label>Original Term End Date</label>
    <type>Date</type>
</CustomField>