objects/Service__c/fields/Original_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Term_Start_Date__c</fullName>
    <label>Original Term Start Date</label>
    <type>Date</type>
</CustomField>