objects/Service__c/fields/Product_Term__c.field-meta.xml
<CustomField>
    <fullName>Product_Term__c</fullName>
    <label>Product Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>