objects/Service__c/fields/Product_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Term_End_Date__c</fullName>
    <label>Product Term End Date</label>
    <type>Date</type>
</CustomField>