objects/Service__c/fields/ServiceOwner__c.field-meta.xml
<CustomField>
    <fullName>ServiceOwner__c</fullName>
    <label>Service Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allstream</fullName>
                <default>true</default>
                <label>Allstream</label>
            </value>
            <value>
                <fullName>Zayo</fullName>
            </value>
            <value>
                <fullName>ILEC</fullName>
                <isActive>false</isActive>
                <label>ILEC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>