objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Customer_Detail__c</columns>
    <columns>MRR__c</columns>
    <columns>Original_Term_Start_Date__c</columns>
    <columns>Original_Term_End_Date__c</columns>
    <columns>Product_Term__c</columns>
    <columns>Product_Term_Start_Date__c</columns>
    <columns>Product_Term_End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Last_product_term_Update_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>